<resources>
    <string name="app_name">JSM APP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="image_user">Image User</string>
    <string name="user_name_placeholder">%s %s</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="test">Test</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="register_please">Don\'t have an account? Register now!</string>
    <string name="hint_email_or_phone">example@example.com</string>
    <string name="hint_password">Must at least 6 character</string>
    <string name="copyright">©2022 Muhammad Fauzi Maulana</string>

    <string name="ok">OK</string>
    <string name="no_internet_title">There is no internet</string>
    <string name="no_internet_message">Please check your connection!</string>


    <string name="email_error_message">Please input your email</string>
    <string name="registration_failed">Registration cannot be proceed</string>
    <string name="password_message">Please input password that you want</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_invalid_format">Invalid email format</string>

    <string name="retype_password">Re-Password</string>
    <string name="hint_retype_password">Retype your password for confirmation</string>
    <string name="retype_password_empty">You should confirm your password by retype it</string>
    <string name="password_error">Password must at least 6 character</string>
    <string name="password_different">Password does not match</string>
    <string name="password_empty">Password cannot be empty</string>

    <string name="logout">Logout</string>
    <string name="alert">Alert</string>
    <string name="logout_confirmation">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="user_id">User ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="avatar">Avatar</string>
    <string name="edit">Edit</string>
    <string name="detail_user">User Detail</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="hint_first_name">Please input your first name</string>
    <string name="hint_last_name">Please input your last name</string>
    <string name="save">Save</string>
    <string name="changed_lost">Change will be lost</string>
    <string name="confirmation">Are you sure want to cancel?</string>
    <string name="first_name_empty">First Name cannot be empty</string>
    <string name="last_name_empty">Last Name cannot be empty</string>

</resources>