<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.addupdate.AddUpdateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentAddUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/previewAvatar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/avatar"
                app:srcCompat="@drawable/ic_baseline_image_24"
                app:layout_constraintDimensionRatio="H,1.5:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/buttonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/camera"
                android:textAllCaps="false"
                app:cornerRadius="32dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
                app:layout_constraintTop_toBottomOf="@id/previewAvatar"/>

            <Button
                android:id="@+id/buttonGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/gallery"
                android:textAllCaps="false"
                app:cornerRadius="32dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guidelineVertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/previewAvatar"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonCamera"
                android:padding="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="top"
                    android:hint="@string/hint_email_or_phone"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:singleLine="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="top"
                    android:hint="@string/hint_first_name"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:singleLine="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstNameEditTextLayout"
                android:padding="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="top"
                    android:hint="@string/hint_last_name"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:singleLine="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameEditTextLayout"/>

            <TextView
                android:id="@+id/textViewCopyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:textSize="11sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonSubmit"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/viewSuccess"
            layout="@layout/view_success"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <include
            android:id="@+id/viewLoading"
            layout="@layout/view_loading"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>